<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ذكرى</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="showHdith">اعرض حديث</string>
    <string name="showMenu">اعرض قائمتى</string>
    <string name="adjust">اضبط الوقت</string>
    <string name="m15">15 دقيقة</string>
    <string name="m30">30 دقيقة</string>
    <string name="hour">1 ساعة</string>
    <string name="siam">صيام الغد</string>
    <string name="close">إغلاق نهائى</string>
    <string name="main">الصفحة الرئيسية</string>
    <string name="menu">أضف لقائمتى</string>
    <string name="lalalala">dsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsfdsdsdsklddsfdsf</string>
    <string name="blank"></string>
    <string name="sdlfjdfs">sddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsfsddddddddddsfdsfdsf</string>

</resources>
