<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img8"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zekra3.Hdith" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/back"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:maxLines="@integer/AN_INTEGER"
        android:paddingBottom="40dp"
        android:scrollbars="vertical"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/my_diem" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="23dp"
        android:text="@string/menu"
        android:textSize="@dimen/my_diem" />

    <Button
        android:id="@+id/shower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add"
        android:layout_alignBottom="@+id/add"
        android:layout_alignParentLeft="true"
        android:text="@string/showHdith"
        android:textSize="@dimen/my_diem" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add"
        android:layout_centerHorizontal="true"
        android:text="@string/main"
        android:textSize="@dimen/my_diem" />

</RelativeLayout>